<resources>
    <string name="app_name">HW_4</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="emailHint">Email Address</string>
    <string name="SubjectHint">Email Subject</string>
    <string name="complexity">Complexity</string>
    <string name="dataStructure">Data Structure</string>
    <string name="operations">Operations</string>
    <string name="getMin">Get Min</string>
    <string name="insert">Insert</string>
    <string name="search">Search</string>
    <string name="lblCase">Case</string>
    <string name="averageCase">Average Case</string>
    <string name="worstCase">Worst Case</string>
    <string name="result">Result</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="body"></string>
    <string name="action_compose">compose</string>
    <string name="action_mail">send</string>
</resources>
