<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:autofillHints="email"/>
    <EditText
        android:id="@+id/editSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:ems="10"
        android:hint="@string/SubjectHint"
        android:autofillHints="name"
        android:inputType="textAutoComplete" />

    <TextView
        android:id="@+id/lblComplexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/complexity"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSubject" />

    <TextView
        android:id="@+id/lblDataStructure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/lblComplexity"
        app:layout_constraintTop_toBottomOf="@+id/lblComplexity"
        android:text="@string/dataStructure" />

    <Spinner
        android:id="@+id/dataStructureSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:entries="@array/dataStructureSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDataStructure" />

    <TextView
        android:id="@+id/lblOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/lblComplexity"
        app:layout_constraintTop_toBottomOf="@+id/dataStructureSpinner"
        android:text="@string/operations" />

    <CheckBox
        android:id="@+id/checkBoxGetMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOperations"
        android:checked="true"
        android:text="@string/getMin"
        android:onClick="updateBody"/>
    <CheckBox
        android:id="@+id/checkBoxInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxSearch"
        app:layout_constraintStart_toEndOf="@+id/checkBoxGetMin"
        app:layout_constraintTop_toBottomOf="@+id/lblOperations"
        android:text="@string/insert"
        android:onClick="updateBody"/>
    <CheckBox
        android:id="@+id/checkBoxSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInsert"
        app:layout_constraintTop_toBottomOf="@+id/lblOperations"
        android:text="@string/search"
        android:onClick="updateBody"/>

    <TextView
        android:id="@+id/lblCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/lblComplexity"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSearch"
        android:text="@string/lblCase" />

    <RadioGroup
        android:id="@+id/radioGroupCase"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCase" >

        <RadioButton
            android:id="@+id/radioButtonAverageCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/radioButtonWorstCase"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/averageCase"
            android:checked="true"
            android:onClick="updateBody"/>
        <RadioButton
            android:id="@+id/radioButtonWorstCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioButtonAverageCase"
            android:text="@string/worstCase"
            android:onClick="updateBody"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCase" />
    <TextView
        android:id="@+id/lblTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/lblResult"
        app:layout_constraintTop_toBottomOf="@+id/lblResult"
        android:text="@string/to" />
    <TextView
        android:id="@+id/lblSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/lblResult"
        app:layout_constraintTop_toBottomOf="@+id/lblTo"
        android:text="@string/subject" />

    <TextView
        android:id="@+id/lblBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblResult"
        app:layout_constraintTop_toBottomOf="@+id/lblSubject" />


</androidx.constraintlayout.widget.ConstraintLayout>